force-app/main/default/objects/Employeecontract__c/fields/Article1_13__c.field-meta.xml
<CustomField>
    <fullName>Article1_13__c</fullName>
    <label>1.3.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chuyên viên tư vấn hệ thống/ Consulting and SF Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>