force-app/main/default/objects/Employeecontract__c/fields/Article1_14__c.field-meta.xml
<CustomField>
    <fullName>Article1_14__c</fullName>
    <label>1.4.</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>