force-app/main/default/objects/Employeecontract__c/fields/ARTICLE3_31_313__c.field-meta.xml
<CustomField>
    <fullName>ARTICLE3_31_313__c</fullName>
    <label>3.1.3.</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>