force-app/main/default/objects/Employeecontract__c/fields/ARTICLE5_c__c.field-meta.xml
<CustomField>
    <fullName>ARTICLE5_c__c</fullName>
    <label>(c)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>