force-app/main/default/objects/Employeecontract__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <label>Company</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>