force-app/main/default/objects/Employeecontract__c/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <formula>Employee__r.Birthday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>