force-app/main/default/objects/Employeecontract__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Employee_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>