force-app/main/default/objects/Employeecontract__c/fields/Mr_Ms__c.field-meta.xml
<CustomField>
    <fullName>Mr_Ms__c</fullName>
    <formula>Employee__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mr./Ms.:</label>
    <type>Text</type>
</CustomField>