force-app/main/default/objects/Employeecontract__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <formula>text( Employee__r.Nationality__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality</label>
    <type>Text</type>
</CustomField>