force-app/main/default/objects/Employeecontract__c/fields/Repbymrms__c.field-meta.xml
<CustomField>
    <fullName>Repbymrms__c</fullName>
    <label>Rep. by Mr.Ms.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>