force-app/main/default/objects/Employeecontract__c/fields/Start_probation__c.field-meta.xml
<CustomField>
    <fullName>Start_probation__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>