force-app/main/default/objects/Employeecontract__c/fields/taxcode__c.field-meta.xml
<CustomField>
    <fullName>taxcode__c</fullName>
    <label>Tax Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>