force-app/main/default/objects/Employeecontract__c/fields/Term_of_Probation_Contract__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Probation_Contract__c</fullName>
    <label>Term of Probation Contract:</label>
    <type>TextArea</type>
</CustomField>