force-app/main/default/objects/Employeecontract__c/recordTypes/Laborcontract.recordType-meta.xml
<RecordType>
    <fullName>Laborcontract</fullName>
    <active>true</active>
    <label>Labor Contract</label>
</RecordType>