force-app/main/default/objects/Employeecontract__c/recordTypes/Probationcontract.recordType-meta.xml
<RecordType>
    <fullName>Probationcontract</fullName>
    <active>true</active>
    <label>Probation Contract</label>
</RecordType>